k8s/platform/openbao/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: openbao
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openbao.chalupatech.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: openbao-active
          port: 8200
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao-tls
  namespace: openbao
  annotations:
    external-dns.alpha.kubernetes.io/target: "dpi2.tailbecff0.ts.net"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openbao.chalupatech.com`)
      kind: Rule
      services:
        - name: openbao-active
          port: 8200
  tls:
    secretName: openbao-tls
